--- a/templates/login.html
+++ b/templates/login.html
@@ -33,7 +33,12 @@
             </p>
 
             <input type="submit" value="Login"><br>
-            <hr><center>OR</center>
+            <center>OR</center>
+            
+          <center>  <a href="{{ url_for('google_login') }}" class="googleButton">
+                <img id="google" src="https://www.google.co.in/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" width="150px" alt="Google">
+            </a></center>
+        
         </form>
     </div>
 </div>
